--- a/public/index.html
+++ b/public/index.html
@@ -84,12 +84,14 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <script async="" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script type="module" src="assets/js/main.js"></script>
-    <script src="assets/js/functions.js"></script>
-    <script src="assets/js/alerts.js"></script>
-    <script src="assets/js/table-buttons.js"></script>
-    <script src="assets/js/docs-buttons.js"></script>
+    <script async="" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script async="" src="assets/js/main.js"></script>
+    <script async="" src="assets/js/functions.js"></script>
+    <script async="" src="assets/js/alerts.js"></script>
+    <!--Modules-->
+    <script src="assets/js/modules/getZIP.js"></script>
+    <script async="" src="assets/js/modules/load.js"></script>
+    <script async=""src="assets/js/modules/saveDB.js"></script>
 
     <!-- Всплывающее окно для сообщений -->
 
