Разделение на модули

--- a/public/index.html
+++ b/public/index.html
@@ -41,32 +41,33 @@
                         <button type="submit" class="float-right btn btn-sm btn-warning" id="saveInfo_btn">Скачать</button>
                       </div>
                       <div class="card-body">
+                        <!-- module-->
                         <div id="info-module"></div>
                       </div>
                     </div>
                   </div>
                 </div>
-                <!--1-->
                 <a class="btn btn-primary btn-block btn-lg text-center mb-2" href="#struktura" id="struk-btn">
                   <i class="fa fa-fw fa-plus"></i>Структура и органы управления образовательной организацией</a>
                 <div class="card mb-3" id="struktura">
                   <div class="card-header"><span class="d-inline-block" style="padding-top: 4px;">Редактирование страницы</span><button type="submit" class="float-right btn btn-sm btn-warning" id="saveStructure_btn">Скачать</button></div>
                   <div class="card-body">
+                    <!-- module-->
                     <div id="structure-module"></div>
                   </div>
                 </div>
-                <!-- Документы не доделаны -->
+                <!-- Документы -->
                 <a class="btn btn-primary btn-block btn-lg mb-2" href="#documenty" id="doc-btn">
                   <i class="fa fa-fw fa-plus"></i>Документы</a>
                 <div class="card mb-3 d-none" id="documenty" style="">
                   <div class="card-header"> Добавление страницы </div>
                   <div class="card-body">
+                    <!-- module-->
                     <div id="docs-module"></div>
                   </div>
                 </div>
               </div>
             </div>
-            <!--1-->
           </div>
         </div>
       </div>
@@ -85,12 +86,12 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <script async="" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script async="" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script async="" src="assets/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
     <script async="" src="assets/js/functions.js"></script>
     <script async="" src="assets/js/alerts.js"></script>
     <!--Modules-->
-    <script src="assets/js/modules/getZIP.js"></script>
-    <script async="" src="assets/js/modules/load.js"></script>
+    <script async="" src="assets/js/modules/getZIP.js"></script>
+    <script src="assets/js/modules/load.js"></script>
     <script async=""src="assets/js/modules/saveDB.js"></script>
 
     <!-- Всплывающее окно для сообщений -->
