--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
                 <a class="btn btn-primary btn-block btn-lg mb-2" href="#documenty" id="doc-btn">
                   <i class="fa fa-fw fa-plus"></i>Документы</a>
                 <div class="card mb-3 d-none" id="documenty" style="">
-                  <div class="card-header"> Добавление страницы </div>
+                  <div class="card-header"><span class="d-inline-block" style="padding-top: 4px;">Добавление страницы</span><button type="submit" class="float-right btn btn-sm btn-warning" id="saveDocs_btn">Скачать</button></div>
                   <div class="card-body">
                     <!-- module-->
                     <div id="docs-module"></div>
